--- a/check/package.json
+++ b/check/package.json
@@ -3,6 +3,8 @@
     "axios": "^0.21.1"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.3",
     "mongodb-realm-cli": "^2.1.0"
   }
 }
