--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mongodb": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -34,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.22.0",
+    "date-fns": "^2.25.0",
+    "react-moment": "^1.1.1",
+    "recharts": "^2.1.4"
   }
 }
