--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
+    "react-dropdown": "^1.9.2",
     "react-moment": "^1.1.1",
     "recharts": "^2.1.4"
   }
